--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body{
    align-items: center;
    border-radius: 10px;
    overflow:hidden;
-   box-shadow:0 0 10px rgba(0,0,0,0.2);
+   /* box-shadow:0 0 10px rgba(0,0,0,0.2); */
    background-color: var(--card-color);
    margin:50px;
    
@@ -32,17 +32,34 @@ body{
 
 }
 
-.image img{
-    width: 100%;
-    height: auto;
-    
-   
+
+img{
+    height: 100%;
+    mix-blend-mode: multiply;
 }
+
+
 
 .image{
     background-color: var(--accent-color);
-    opacity:35%;
+    opacity:50;
+    position: relative;
+ 
 }
+
+.image::before{
+  
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color: var(--accent-color);
+   opacity: 50%;
+ 
+}
+
+
 
 .information{
     margin:30px;
@@ -146,18 +163,7 @@ body{
         font-size: 14px;
      }
 
-         .image img {
-             width: 100%;
-             height: auto;
-            background-color: var(--accent-color);
-                opacity: 35%;
-            }
-         }
-
-         .image {
-             background-color: var(--accent-color);
-             opacity: 35%;
-         }
+   
 
 
     
